# my-own-apps

./: .gitignore  ASSUMPTIONS.md  CLAUDE.md  README.md
ariadne/: .gitignore  CLAUDE.md
ariadne/procedure/: README.md
ariadne/roadmap/: README.md  phase0-ocaml-basics.md  phase1-ast-traversal.md  phase2-typescript-treesitter.md  phase3-complexity-mvp.md  phase4-repository-scan.md  phase5-ci-and-multilang.md
ariadne/tool/: README.md  dune-project
audio2text/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
audio2text/src/: ffmpeg.ts  formatter.ts  (+8 more)
daedalus/: .gitignore  CLAUDE.md  README.md  pyproject.toml
daedalus/docs/: architecture.md  concept.md  feature-ideas.md  setup-guide.md
daedalus/examples/: cloudflare.example.yaml  gcp.example.yaml  spec.example.yaml
daedalus/src/daedalus/: __init__.py  __main__.py  agent.py  cli.py  config.py  github_sync.py  guardrails.py  journal.py  prompts.py  server.py  terraform_output.py
daedalus/src/daedalus/web/: app.js  index.html  style.css
habiterm/: project.yml
image-comp/: docker-compose.yml
investment/: .gitignore
journal/: 2026-05-28-marginalia-ideation.md  2026-06-09-telos-ideation.md  2026-06-10-cloud-infra-agent-decision.md  2026-06-10-daedalus-quickwins.md  2026-06-10-daedalus-v2-instructions.md  2026-06-10-telos-deal-lifecycle-tools.md  2026-06-10-telos-freelance-tools.md  2026-06-10-telos-llm-and-brief.md  2026-07-18-time-branch-implementation.md
marginalia/: README.md
telos/: README.md  package.json  pnpm-lock.yaml
time-branch/: README.md  RELEASE_TODO.md  project.yml
(+219 files in other folders)
