[project]
name = "daedalus"
version = "0.1.0"
description = "Cloud infrastructure construction agent that generates, deploys and self-repairs Terraform via headless Claude Code."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "pyyaml>=6.0",
]

[project.scripts]
daedalus = "daedalus.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
