[project]
name = "daedalus"
version = "0.2.0"
description = "Cloud infrastructure construction agent that generates, deploys and self-repairs Terraform via headless Claude Code."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
daedalus = "daedalus.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
daedalus = ["web/*"]
